# indirect_flight_trajectory_manipulation

rotors_simulator/: README.md
rotors_simulator/rotors_control/: CMakeLists.txt  package.xml
rotors_simulator/rotors_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml
rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_simulator/rotors_joy_interface/: CMakeLists.txt  package.xml
trajectory_reshaping_adaptive_view/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
trajectory_reshaping_adaptive_view/cfg/: AdaptiveView.cfg  AdaptiveView.cfg~  HandMapping.cfg~  ds_setpoint_buffer.cfg~
trajectory_reshaping_adaptive_view/config/: ds_setpoint_buffer.yaml~  trajectory_reshaping_adaptive_view.yaml
trajectory_reshaping_adaptive_view/include/: trajectory_reshaping_adaptive_view_node.h
trajectory_reshaping_adaptive_view/launch/: trajectory_reshaping_adaptive_view.launch  trajectory_reshaping_adaptive_view.launch~
trajectory_reshaping_adaptive_view/src/: ds_reshape_hand_mapping_node.cpp~  trajectory_reshaping_adaptive_view_node.cpp
trajectory_reshaping_bringup/: CMakeLists.txt  package.xml  package.xml~
trajectory_reshaping_hand_mapping/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
trajectory_reshaping_test/gazebo_model_spawn/: CMakeLists.txt  package.xml
trajectory_reshaping_test/gazebo_model_spawn/include/gazebo_model_spawn/: gazebo_model_spawn.h
trajectory_reshaping_test/gazebo_model_spawn/src/: gazebo_model_spawn.cpp  gazebo_model_spawn_node.cpp
trajectory_reshaping_trajectory_generation/: CMakeLists.txt  CMakeLists.txt~  package.xml~
trajectory_reshaping_velocity_profile/: CMakeLists.txt  package.xml  package.xml~
trajectory_reshaping_viz/: CMakeLists.txt  package.xml  package.xml~
trajectory_reshaping_world_logic/: CMakeLists.txt  package.xml  package.xml~
trajectory_reshaping_world_logic/include/trajectory_reshaping_world_logic/: trajectory_reshaping_world_logic.h
trajectory_reshaping_world_logic/launch/: trajectory_reshaping_world_logic.launch
trajectory_reshaping_world_logic/src/: trajectory_reshaping_world_logic.cpp  trajectory_reshaping_world_logic_node.cpp
trajectory_reshaping_world_visualizer/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
trajectory_reshaping_world_visualizer/config/: ds_rviz_config.rviz~  trajectory_reshaping_world_visualizer.yaml  trajectory_reshaping_world_visualizer.yaml~
trajectory_reshaping_world_visualizer/launch/: ds_reshape_world_visualizer.launch~  ds_rviz_object_rendering.launch~  trajectory_reshaping_world_visualizer.launch  trajectory_reshaping_world_visualizer.launch~
trajectory_reshaping_world_visualizer/resources/hands/: right_hand_old.urdf
trajectory_reshaping_world_visualizer/resources/kinect/meshes/: test.dae  test1.dae  test2.dae  town.dae
trajectory_reshaping_world_visualizer/resources/obstacle_sphere/: obstaclesphere.xacro
trajectory_reshaping_world_visualizer/resources/realistic_hand/: hand_meshlab.3ds  hand_meshlab.dae  realistic_hand_left.dae  realistic_hand_left.mtl  realistic_hand_left.skp  realistic_hand_left.stl  realistic_hand_right.dae  realistic_hand_right.mtl  realistic_hand_right.stl  realistichandleft (copy).xacro  realistichandleft.xacro  realistichandright (copy)_old.xacro  realistichandright.xacro  realistichandright_lab.xacro
trajectory_reshaping_world_visualizer/resources/trajectory/: trajectory_point.urdf
trajectory_reshaping_world_visualizer/resources/trajectory_reshaping/: trajectory_reshaping_mockup.dae  trajectory_reshaping_mockup.skp  trajectory_reshaping_mockup.stl
trajectory_reshaping_world_visualizer/resources/trajectory_reshaping_mockup/: trajectory_reshaping_mockup.dae  trajectory_reshaping_mockup.skp  trajectory_reshaping_mockup.stl  trajectory_reshaping_mockup.xacro
trajectory_reshaping_world_visualizer/resources/trajectory_reshaping_mockup_older/: trajectory_reshaping_mockup.dae  trajectory_reshaping_mockup.mtl  trajectory_reshaping_mockup.skp  trajectory_reshaping_mockup.stl
trajectory_reshaping_world_visualizer/resources/trajectory_reshaping_mockup_older_new/: trajectory_reshaping_mockup.dae  trajectory_reshaping_mockup.mtl  trajectory_reshaping_mockup.skp  trajectory_reshaping_mockup.stl
trajectory_reshaping_world_visualizer/resources/tree/: tree.mtl  tree.stl  tree.xacro
trajectory_reshaping_world_visualizer/resources/tree_simplified/: reduced_tree_old.dae  tree_simplified.xacro
trajectory_reshaping_world_visualizer/resources/world_basic/: world.mtl  world_basic.xacro
trajectory_reshaping_world_visualizer/resources/world_simplified/: world_simplified.3ds  world_simplified.stl
trajectory_reshaping_world_visualizer/resources/world_simplified_new_old/: world_simplified.3ds
trajectory_reshaping_world_visualizer/resources/world_simplified_old/: world_simplified.3ds  world_simplified.mtl  world_simplified.stl  world_simplified.xacro
trajectory_reshaping_world_visualizer/src/: ds_rviz_object_rendering.cpp~  ds_rviz_object_rendering_node.cpp~  trajectory_reshaping_world_visualizer_node.cpp
(+149 files in other folders)
