<package>
  <name>gazebo_model_spawn</name>
  <version>2.1.1</version>
  <description>Spawning of models in Gazebo.</description>

  <maintainer email="matej@matej.com">Matej</maintainer>

  <author>Matej</author>

  <license>ASL 2.0</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
